--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,23 @@ dependencies {
     
     //DB연동관련 libraray추가
 	compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.9.RELEASE'
-	compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.58'
-	testCompile group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '19.7.0.0'
+	compile group: 'com.oracle.database.jdbc', name: 'ojdbc8', version: '19.7.0.0'
+    
+	// myBatis
+    compile group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.5'
+    // https://mvnrepository.com/artifact/org.mybatis/mybatis
+    compile group: 'org.mybatis', name: 'mybatis', version: '3.5.5'
+    
+    //Hikari CP
+    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
+//    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
+//   compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+
+//   compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.13.3'
+	compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+	compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+
     
     testImplementation 'junit:junit:4.12'
 }
