--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 }
 
 dependencies {
+	testCompile group: 'org.springframework', name: 'spring-test', version: '5.2.9.RELEASE'
 	compile group: 'org.springframework', name: 'spring-context', version: '5.2.9.RELEASE'
 	runtime group: 'org.aspectj', name: 'aspectjweaver', version: '1.9.6'
     
